# paste3

./: .buildinfo  .pre-commit-config.yaml  README.md  api.html  environment.yml  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  tutorial.html
.github/workflows/: build.yml  docs.yml  test_pinned_deps.yml  test_pinned_deps_gpu.yml  test_unpinned_deps.yml
_modules/: index.html
_modules/paste3/: glmpca.html  helper.html  model_selection.html  paste.html  paste2.html  projection.html  visualization.html
_sources/: installation.md.txt
_sources/api/: paste3.glmpca.est_nb_theta.rst.txt  paste3.glmpca.ortho.rst.txt  paste3.helper.dissimilarity_metric.rst.txt  paste3.helper.filter_for_common_genes.rst.txt  paste3.helper.get_common_genes.rst.txt  paste3.helper.glmpca_distance.rst.txt  paste3.helper.high_umi_gene_distance.rst.txt  paste3.helper.kl_divergence.rst.txt  paste3.helper.norm_and_center_coordinates.rst.txt  paste3.helper.pca_distance.rst.txt  paste3.model_selection.calculate_convex_hull_edge_inconsistency.rst.txt  paste3.model_selection.convex_hull_edge_inconsistency.rst.txt  paste3.model_selection.create_graph.rst.txt  paste3.model_selection.generate_graph.rst.txt  paste3.model_selection.generate_graph_from_labels.rst.txt  paste3.model_selection.plot_edge_curve.rst.txt  paste3.model_selection.select_overlap_fraction.rst.txt  paste3.paste.center_NMF.rst.txt  paste3.paste.center_ot.rst.txt  paste3.paste.line_search_partial.rst.txt  paste3.paste.my_fused_gromov_wasserstein.rst.txt  paste3.paste.pairwise_align.rst.txt  paste3.paste2.partial_fused_gromov_wasserstein.rst.txt  paste3.paste2.partial_pairwise_align.rst.txt  paste3.paste2.partial_pairwise_align_given_cost_matrix.rst.txt  paste3.paste2.partial_pairwise_align_histology.rst.txt  paste3.visualization.generalized_procrustes_analysis.rst.txt  paste3.visualization.partial_procrustes_analysis.rst.txt  paste3.visualization.partial_stack_slices_pairwise.rst.txt  paste3.visualization.stack_slices_pairwise.rst.txt
_sources/notebooks/: paste2_tutorial.ipynb.txt  paste_tutorial.ipynb.txt
_static/: documentation_options.js
api/: paste3.glmpca.est_nb_theta.html  paste3.glmpca.glmpca.html  paste3.glmpca.glmpca_init.html  paste3.glmpca.mat_binom_dev.html  paste3.glmpca.ortho.html  paste3.helper.dissimilarity_metric.html  paste3.helper.filter_for_common_genes.html  paste3.helper.get_common_genes.html  paste3.helper.glmpca_distance.html  paste3.helper.high_umi_gene_distance.html  paste3.helper.kl_divergence.html  paste3.helper.match_spots_using_spatial_heuristic.html  paste3.helper.norm_and_center_coordinates.html  paste3.helper.pca_distance.html  paste3.model_selection.calculate_convex_hull_edge_inconsistency.html  paste3.model_selection.convex_hull_edge_inconsistency.html  paste3.model_selection.create_graph.html  paste3.model_selection.edge_inconsistency_score.html  paste3.model_selection.generate_graph.html  paste3.model_selection.generate_graph_from_labels.html  paste3.model_selection.plot_edge_curve.html  paste3.model_selection.select_overlap_fraction.html  paste3.model_selection.select_overlap_fraction_plotting.html  paste3.paste.center_NMF.html  paste3.paste.center_align.html  paste3.paste.center_ot.html  paste3.paste.line_search_partial.html  paste3.paste.my_fused_gromov_wasserstein.html  paste3.paste.pairwise_align.html  paste3.paste2.gwgrad_partial.html  paste3.paste2.partial_fused_gromov_wasserstein.html  paste3.paste2.partial_pairwise_align.html  paste3.paste2.partial_pairwise_align_given_cost_matrix.html  paste3.paste2.partial_pairwise_align_histology.html  paste3.projection.partial_procrustes_analysis.html  paste3.projection.partial_stack_slices_pairwise.html  paste3.visualization.generalized_procrustes_analysis.html  paste3.visualization.partial_procrustes_analysis.html  paste3.visualization.partial_stack_slices_pairwise.html  paste3.visualization.plot_slice.html  (+2 more)
docs/source/: api.rst  conf.py  index.rst  tutorial.rst
docs/src/: paste3.rst  src.paste3.rst  src.rst
notebooks/: paste2_tutorial.html  paste2_tutorial.ipynb  paste3_dataset.html  paste3_dataset.ipynb  paste3_tutorial.html  paste3_tutorial.ipynb  paste_tutorial.html  spatialdata.html
scripts/: workflow.py
src/: helper.py
src/paste/: __init__.py  paste-cmd-line.py  paste.py
src/paste2/: model_selection.py  paste2.py
src/paste3/: __init__.py  __main__.py  align.py  io.py  (+9 more)
tests/: conftest.py  test_align.py  test_dataset_alignmentdataset.py  test_dataset_slice.py  test_glmpca.py  test_model_selection.py  test_napari_plugin.py  test_paste.py  test_paste2.py  test_paste_cmd_line.py  test_paste_helpers.py  test_visualization.py
(+70 files in other folders)
