[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "paste"
authors = [
    {name="Max Land", email="max.ruikang.land@gmail.com"}
]
description = "A computational method to align and integrate spatial transcriptomics experiments."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "anndata",
    "scanpy",
    "POT",
    "numpy",
    "scipy",
    "scikit-learn",
    "IPython",
    "statsmodels"
]
dynamic = ["version"]

[project.scripts]
paste = "paste.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-sv"

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "coverage",
    "coveralls",
    "ruff",
    "pre-commit",
]
